--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 	<title>Keshav Sharma</title>
 	<meta content="width=device-width, initial-scale=1" name="viewport">
 	<link href="styles.css" rel="stylesheet" type="text/css" />
+	<script>
+javascript:document.body.contentEditable='true'; document.designMode='on'; void 0
+</script>
 </head>
 <body class="body">
 <div class="div-block">
